# RV32ASM

./: CMakeLists.txt  assembleMe.s  main.cpp  readme.md
include/assembler/: instruction.h  line.h  pseudo.h
include/lookup/: instruction.h  pseudo.h  register.h
include/optimizer/: instruction_ir.h  optimizer.h
include/parser/instruction/: b_type.h  env_type.h  i_type.h  j_type.h  l_type.h  r_type.h  s_type.h  u_type.h
include/parser/pseudo/: call.h  j.h  jr.h  li.h  mv.h  neg.h  nop.h  not.h  pop_b.h  pop_frame.h  pop_h.h  pop_w.h  push_b.h  push_frame.h  push_h.h  push_w.h  ret.h
include/types/: label_section.h
include/utils/: common.h  data.h  instruction.h
ranzV/: cpu.circ
src/: DataParser.h  LabelSection.cpp  LabelSection.h  Utils.h  dUtils.h  main.cpp  utils.h
src/assembler/: instruction.cpp  line.cpp  pseudo.cpp
src/instructionParsers/: assembleLine.h  iUtils.h  parseIALUType.h  parseIType.h  parseLType.h  parseRALUType.h  parseSType.h
src/instructionStuff/: assembleInst.h  assembleLine.h  assemblePseudo.h  iUtils.h  transformPseudo.h
src/instructionStuff/parse/: parseBType.h  parseEnvType.h  parseIALUType.h  parseJType.h  parseLType.h  parseRALUType.h  parseSType.h  parseUType.h
src/instructionStuff/parse/pseudo/: parseCall.h  parseJ.h  parseJr.h  parseLi.h  parseMv.h  parseNeg.h  parseNop.h  parseNot.h  parsePopB.h  parsePopFrame.h  parsePopH.h  parsePopW.h  parsePushB.h  parsePushFrame.h  parsePushH.h  parsePushW.h  parseRet.h
src/lookup/: inst.h  instruction.cpp  pseudo.cpp  pseudo.h  reg.h  register.cpp
src/optimizer/: instruction_ir.cpp  optimizer.cpp
src/parser/instruction/: b_type.cpp  env_type.cpp  i_type.cpp  j_type.cpp  l_type.cpp  r_type.cpp  s_type.cpp  u_type.cpp
src/parser/pseudo/: call.cpp  j.cpp  jr.cpp  li.cpp  mv.cpp  neg.cpp  nop.cpp  not.cpp  pop_b.cpp  pop_frame.cpp  pop_h.cpp  pop_w.cpp  push_b.cpp  push_frame.cpp  push_h.cpp  push_w.cpp  ret.cpp
src/types/: label_section.cpp
src/utils/: common.cpp  data.cpp  instruction.cpp
